fix for tab separators on Firefox 108

--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -5,7 +5,7 @@
 /* "List all tabs" button */ 
 #alltabs-button,
 /* bookmark popup thumbnail */ 
-#editBookmarkPanelImage,#editBookmarkPanelFaviconContainer,#editBookmarkSeparator,
+#editBookmarkPanelFaviconContainer,#editBookmarkPanelImage,#editBookmarkSeparator,
 /* "Search with" or "Visit" */
 .urlbarView-row:first-of-type{display:none!important;}
 
@@ -19,5 +19,8 @@
 .tabbrowser-tab[usercontextid]>.tab-stack>.tab-background>.tab-context-line{margin-top:calc(var(--tab-min-height) - 3px)!important;}
 .tabbrowser-tab[usercontextid]:is([selected=true],[visuallyselected="true"],[multiselected])>.tab-stack>.tab-background>.tab-context-line{margin-top:calc(var(--tab-min-height) - 3px)!important;}
 
-/* square tabs and padding fixes from https://github.com/leadweedy/Firefox-Proton-Square/ */
-#TabsToolbar{height:33px!important}:root{--tab-min-height:33px!important}.tab-background{border-radius:0!important;margin-top:0!important;margin-bottom:0!important}.tab-content{margin-top:0!important;margin-bottom:0!important}.tab-stack{margin-top:0!important;margin-bottom:0!important}.tabbrowser-tab{padding-inline:0!important}.tab-content::before,.tab-content::after{content:""!important;display:block!important;position:absolute!important;background-color:#535354!important;width:1px!important;height:40px!important;transform:translateY(-20px)!important;opacity:0!important;transition:opacity 1s var(--ease-basic)!important}.tab-content::before{left:0!important}.tab-content::after{right:0!important}.tabbrowser-tab[visuallyselected][style*="transform"] + .tabbrowser-tab[style*="transform"] .tab-content::after,.tabbrowser-tab[style*="transform"]:not([visuallyselected]) .tab-content::before,.tabbrowser-tab[style*="transform"] + .tabbrowser-tab:not([visuallyselected]) .tab-content::before,.tabbrowser-tab:not([visuallyselected]):not(:hover):not([multiselected]) + .tabbrowser-tab:not([visuallyselected]):not(:hover):not([multiselected]) .tab-content::before,#tabbrowser-tabs[hasadjacentnewtabbutton]:not([overflow]) .tabbrowser-tab[last-visible-tab]:not([visuallyselected]):not(:hover):not([multiselected]) .tab-content::after{opacity:var(--tab-separator-opacity)!important}#nav-bar{height:35px!important}:root{--arrowpanel-menuitem-padding:6px 8px!important;--arrowpanel-menuitem-margin:0 4px!important;--panel-subview-body-padding:4px 0!important}
+/* square tabs from https://github.com/leadweedy/Firefox-Proton-Square/ */
+.tab-background,.tab-content,.tab-stack{margin-top:0!important;margin-bottom:0!important}#TabsToolbar{height:33px!important}:root{--tab-min-height:33px!important;--arrowpanel-menuitem-padding:6px 8px!important;--arrowpanel-menuitem-margin:0 4px!important;--panel-subview-body-padding:4px 0!important}.tab-background{border-radius:0!important}.tabbrowser-tab{padding-inline:0!important}#nav-bar{height:35px!important}
+
+/* tab dividers/separators based on https://github.com/black7375/Firefox-UI-Fix */
+.tab-background::after,.tab-background::before{display:block;position:absolute;top:50%;transform:translateY(-50%);width:0;height:100%;border-right:1px solid #535354}.tab-background::after{right:0;content:""}.tabbrowser-tab[beforeselected-visible] .tab-background::after,.tabbrowser-tab[first-visible-tab=true] .tab-background::before,.tabbrowser-tab[last-visible-tab=true] .tab-background::after,.tabbrowser-tab[visuallyselected] .tab-background::after,.tabbrowser-tab[visuallyselected] .tab-background::before{opacity:0}
